- https://github.com/eclipse-syson/syson/issues/883[#883] [explorer] Fix `getChildren` error with specific filter combinations.
The explorer now correctly allows to expand elements when the _Hide Root Namespaces_ filter is disabled and the `Hide KerML/SysML Standard Libraries` filter is enabled.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/829[#829] [metamodel] `OccurrenceUsag#portionKind` is now unsettable and its default value is `null`.
- https://github.com/eclipse-syson/syson/issues/796[#796] [import] Improve the code in import module, by making it more generic
- https://github.com/eclipse-syson/syson/issues/818[#818] [export] Add partial support of `OccurrenceDefinition` and 'OccurrenceUsage` in export from model to textual SysMLv2.
- https://github.com/eclipse-syson/syson/issues/875[#875] [explorer] Improve the support of libraries in the explorer.
The explorer now contains 2 directories:
*  _Standard Libraries_: contains the SysML and KerML libraries
* _Referenced Libraries_: contains non-standard libraries imported by the user

=== New features

- https://github.com/eclipse-syson/syson/issues/802[#802] [diagrams] Handle imported package elements in diagrams.

== v2024.11.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/699[#699] [general-view] Add CaseUsage and CaseDefinition in General View diagram.
The following classes have been renamed to reflect their new usage:
* Rename `UseCaseDefinitionActorsCompartmentNodeDescriptionProvider` to `CaseDefinitionActorsCompartmentNodeDescriptionProvider`
* Rename `UseCaseDefinitionObjectiveRequirementCompartmentNodeDescriptionProvider` to `CaseDefinitionObjectiveRequirementCompartmentNodeDescriptionProvider`
* Rename `UseCaseDefinitionSubjectCompartmentNodeDescriptionProvider` to `CaseDefinitionSubjectCompartmentNodeDescriptionProvider`
* Rename `UseCaseUsageActorsCompartmentNodeDescriptionProvider` to `CaseUsageActorsCompartmentNodeDescriptionProvider`