@@ -27,6 +27,7 @@
 - https://github.com/eclipse-syson/syson/issues/868[#868] [export] Fix textual export of `LibraryPackage`
 - https://github.com/eclipse-syson/syson/issues/883[#883] [explorer] Fix `getChildren` error with specific filter combinations.
 The explorer now correctly allows to expand elements when the _Hide Root Namespaces_ filter is disabled and the `Hide KerML/SysML Standard Libraries` filter is enabled.
+- https://github.com/eclipse-syson/syson/issues/884[#884] [related-elements] Fix an issue where some error messages were displayed when an element with implicit Specialization was selected and the Related Elements View was displayed.
 
 === Improvements
 
